--- a/AlarmPaw/Launch Screen.storyboard
+++ b/AlarmPaw/Launch Screen.storyboard
@@ -28,25 +28,25 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="ucr-72-YMc">
-                                <rect key="frame" x="119" y="173" width="155" height="133"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slogo" translatesAutoresizingMaskIntoConstraints="NO" id="ucr-72-YMc">
+                                <rect key="frame" x="111" y="172" width="171" height="171"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="133" id="No2-9c-8ms"/>
+                                    <constraint firstAttribute="height" constant="171" id="xpx-jy-gdg"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="GJd-Yh-RWb" secondAttribute="bottom" constant="130" id="L5z-f5-fsl"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="trailing" secondItem="obG-Y5-kRd" secondAttribute="trailing" id="LkC-Tg-aNA"/>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="119" id="T8x-Lw-RiZ"/>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="XRt-Hm-Wh0"/>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="114" id="YEe-mq-w0C"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="obG-Y5-kRd" secondAttribute="leading" id="eTL-xl-bEa"/>
-                            <constraint firstAttribute="trailing" secondItem="GJd-Yh-RWb" secondAttribute="trailing" id="jgN-Zx-5kY"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="-14" id="oaD-ay-Tc0"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="y1p-It-xQs"/>
+                            <constraint firstItem="ucr-72-YMc" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="111" id="5MK-bo-lTf"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="-14" id="HQg-9I-kui"/>
+                            <constraint firstItem="ucr-72-YMc" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="113" id="S3g-cM-VJw"/>
+                            <constraint firstItem="ucr-72-YMc" firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="VyB-B8-V8D"/>
+                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="obG-Y5-kRd" secondAttribute="leading" id="e37-10-mM7"/>
+                            <constraint firstItem="ucr-72-YMc" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gDY-YU-hEd"/>
+                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="go9-Du-AHO"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="GJd-Yh-RWb" secondAttribute="bottom" constant="130" id="mFn-fJ-jXR"/>
+                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="trailing" secondItem="obG-Y5-kRd" secondAttribute="trailing" id="oGn-XH-IBz"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -56,6 +56,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="341.33334350585938" height="341.33334350585938"/>
+        <image name="slogo" width="341.33334350585938" height="341.33334350585938"/>
     </resources>
 </document>
