--- a/AlarmPaw/Launch Screen.storyboard
+++ b/AlarmPaw/Launch Screen.storyboard
@@ -16,13 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
-                                <rect key="frame" x="0.0" y="832" width="393" height="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AlarmPaw" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="GJd-Yh-RWb">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ALARM PAW" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="GJd-Yh-RWb">
                                 <rect key="frame" x="0.0" y="645" width="393" height="43"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -31,22 +25,19 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slogo" translatesAutoresizingMaskIntoConstraints="NO" id="ucr-72-YMc">
                                 <rect key="frame" x="111" y="172" width="171" height="171"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="171" id="xpx-jy-gdg"/>
+                                    <constraint firstAttribute="height" constant="171" id="WRr-ep-4KR"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="111" id="5MK-bo-lTf"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="-14" id="HQg-9I-kui"/>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="113" id="S3g-cM-VJw"/>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="VyB-B8-V8D"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="obG-Y5-kRd" secondAttribute="leading" id="e37-10-mM7"/>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gDY-YU-hEd"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="go9-Du-AHO"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="GJd-Yh-RWb" secondAttribute="bottom" constant="130" id="mFn-fJ-jXR"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="trailing" secondItem="obG-Y5-kRd" secondAttribute="trailing" id="oGn-XH-IBz"/>
+                            <constraint firstItem="ucr-72-YMc" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Lln-nr-z7o"/>
+                            <constraint firstItem="ucr-72-YMc" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="111" id="Omd-QN-SgE"/>
+                            <constraint firstItem="ucr-72-YMc" firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="PHd-eR-E1Y"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="GJd-Yh-RWb" secondAttribute="bottom" constant="130" id="ffy-nF-3fl"/>
+                            <constraint firstItem="ucr-72-YMc" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="113" id="j7d-rF-z4y"/>
+                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="oh5-PN-m3u"/>
                         </constraints>
                     </view>
                 </viewController>
