--- a/AlarmPaw/Launch Screen.storyboard
+++ b/AlarmPaw/Launch Screen.storyboard
@@ -16,28 +16,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ALARM PAW" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="GJd-Yh-RWb">
-                                <rect key="frame" x="0.0" y="645" width="393" height="43"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm Paw" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="GJd-Yh-RWb">
+                                <rect key="frame" x="0.0" y="656" width="393" height="43"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slogo" translatesAutoresizingMaskIntoConstraints="NO" id="ucr-72-YMc">
-                                <rect key="frame" x="111" y="172" width="171" height="171"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slogo" translatesAutoresizingMaskIntoConstraints="NO" id="uLR-dR-qgI">
+                                <rect key="frame" x="92" y="215" width="209" height="134"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="171" id="WRr-ep-4KR"/>
+                                    <constraint firstAttribute="height" constant="134" id="EtF-Ms-ib6"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Lln-nr-z7o"/>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="111" id="Omd-QN-SgE"/>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="PHd-eR-E1Y"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="GJd-Yh-RWb" secondAttribute="bottom" constant="130" id="ffy-nF-3fl"/>
-                            <constraint firstItem="ucr-72-YMc" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="113" id="j7d-rF-z4y"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="oh5-PN-m3u"/>
+                            <constraint firstItem="uLR-dR-qgI" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="156" id="2zp-fR-7Pe"/>
+                            <constraint firstItem="uLR-dR-qgI" firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="5ON-Af-Aw7"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="GJd-Yh-RWb" secondAttribute="bottom" constant="119" id="FUd-u2-RfM"/>
+                            <constraint firstAttribute="trailing" secondItem="GJd-Yh-RWb" secondAttribute="trailing" id="iF0-8p-N2g"/>
+                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="med-xu-jZx"/>
+                            <constraint firstItem="uLR-dR-qgI" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="92" id="zeg-v8-ss7"/>
                         </constraints>
                     </view>
                 </viewController>
